# Alpha-Network

./: .gitignore  BUILD_REPORT.md  CONTRIBUTING.md  Caddyfile  GALAXIA.md  LICENSE  OUTREACH.md  README.md  VALIDATOR_GUIDE.md  genesis_mainnet.json  go.mod  go.sum  main.go  quickstart.py
.github/workflows/: ci.yml
chain/agent/: registry.go
chain/api/: ratelimit.go  server.go
chain/consensus/: poi.go
chain/core/: types.go
chain/crypto/: bech32.go  bech32_test.go  signatures.go  zkproof.go
chain/data/: intelligence.go
chain/genesis/: genesis.go
chain/governance/: governance.go
chain/ipfs/: client.go
chain/ledger/: ledger.go
chain/monitor/: monitor.go
docs/: AGENT_SHOWCASE.md  API_REFERENCE.md  DEPLOY.md  DEVELOPER_GUIDE.md  GITHUB_DISCUSSION_QUICKSTART.md  MAINNET_CHECKLIST.md  OPENCLAW_INTEGRATION.md  RELEASE.md  SDK.md  SECURITY_AUDIT.md  alpha-explorer.service  alphanode.service
explorer/: go.mod  main.go
scripts/: alpha-monitor.sh  auto-deploy.sh  deploy-all.sh  deploy-website.sh  github_push.sh  integration_test.sh  p2p_stress_test.sh  publish-to-pypi.sh  run_agent.sh  run_testnet.sh  start-alpha.sh  start-webserver.sh  stop-alpha.sh  watch-website.sh
sdk/python/: README.md  alpha_sdk.py  example_agent.py  pyproject.toml
sdk/python/alpha_network_sdk/: __init__.py  alpha_sdk.py  solana_agent.py  test_sdk.py
sdk/python/alpha_network_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
solana/: Anchor.toml  LAUNCH_PLAN.md  README.md  alpha-token-devnet.json  alpha-token-localnet.json  deploy_spl_token.js  package-lock.json  package.json  test_solana_integration.py
solana/programs/alpha-network/: Cargo.toml
solana/programs/alpha-network/src/: lib.rs
website/: agent-onboarding.html  dashboard.html  home.html  index.html  presale.html  serve.go  whitepaper.html  wp.html
whitepaper/: ALPHA_WHITEPAPER.md
(+20 files in other folders)
