[package]
name = "alpha-network"
version = "0.1.0"
description = "Alpha Network Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "alpha_network"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
